Add Maven 4 migration script and environment setup
This commit establishes the foundation for Maven 4 migration work:

**Environment Configuration:**
- Add M4_HOME and M3_HOME variables to env.sh and .envrc-template
- Document SDKMAN-based setup for Maven 4.0.0-beta-5
- M4_HOME/bin added to PATH only in m4 scripts, not globally
- Mark ECLIPSE_HOME as legacy in environment setup

**Migration Strategy Documentation:**
- Create comprehensive Maven 4 migration guide in .claude/transformations/
- Document Module Source Hierarchy approach with explicit module declarations
- Define directory structure with m4/ subdirectories and symlink strategy
- Provide POM templates and script templates (compile.sh, run.sh, verify.sh, clean.sh)

**Key Learnings from Test Migration:**
- Maven 4 requires model version 4.1.0 and maven-compiler-plugin 4.0.0-beta-3
- Maven 4 requires Java 17+ to run, but can target Java 11 via maven.compiler.release
- JDK strategy: Maven runs with JDK 17, compiles for Java 11, runtime uses Java 11
- Build separation: m4 artifacts go to m4/mlib (not ../mlib)
- Script design: Stay close to original script patterns for comparability
- All scripts must be shellcheck-compliant with documented exceptions

**Documentation Updates:**
- Update CLAUDE.md with Maven 4 environment variables section
- Document that M4_HOME is only used in compile scripts
- Reference maven-4-migration.md transformation guide

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

Introduced in the course of support-and-care/maven-support-and-care#137